# NIYO_01

./: LICENSE  README.md  manage.py  pyproject.toml
Auth/: apps.py  models.py  serializers.py  urls.py  views.py
Auth/migrations/: 0001_initial.py
NIYO/: asgi.py  settings.py  urls.py  wsgi.py
Tasks/: apps.py  models.py  serializers.py  urls.py  views.py
Tasks/migrations/: 0001_initial.py
docs/: .env.sample
